# muchovha-agentic-os

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  agentos-key.pem  aws-deploy.sh  deploy.sh  muchovhaos-key.pem  requirements.txt
app/: ai.py  config.py  history.py  main.py  monitor.py  prompts.py  terminal.py
app/agent/: __init__.py  loop.py  skills.py  tools.py
app/mcp/: server.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  store.ts  theme.css
frontend/src/components/: AgentPanel.css  AgentPanel.tsx  AgentTimeline.css  AgentTimeline.tsx  AlertFeed.css  AlertFeed.tsx  ChatPanel.css  ChatPanel.tsx  CommandBar.css  CommandBar.tsx  CommandPalette.css  CommandPalette.tsx  RichMarkdown.css  RichMarkdown.tsx  SkillDrawer.css  SkillDrawer.tsx  StatusChip.css  StatusChip.tsx  SystemBar.css  SystemBar.tsx  SystemVitals.css  SystemVitals.tsx  TerminalPanel.css  TerminalPanel.tsx  Toasts.css  Toasts.tsx
kernel/: CMakeLists.txt
kernel/bindings/: module.cpp
kernel/include/agent_kernel/: cgroup.h  file_utils.h  fs_watcher.h  metrics.h  network.h  process.h  sandbox.h
kernel/src/: cgroup.cpp  file_utils.cpp  fs_watcher.cpp  metrics.cpp  network.cpp  process.cpp  sandbox.cpp
skills/code-compiler/: SKILL.md
skills/git-workflow/: SKILL.md
skills/network-debug/: SKILL.md
skills/package-manager/: SKILL.md
skills/system-monitor/: SKILL.md
